style.css
body{
    font-family: 'Montserrat', sans-serif;
    margin:0;

    
}
/*Styling for header section*/
.header{
    background-color: #1F2937;
    color:white;
    display:flex;
    font-weight:600;
    font-size:24px;
    align-items: center;
    justify-content: space-between;
    padding: 0 200px;
}

ul{
    list-style-type:none;
    font-weight:normal;
    font-size:18px;
    display:flex;
    gap:10px;
}
a{
    color:white;
    text-decoration: none;
}

/*Hero Section*/
.hero-section{
    background-color: #1F2937;
    color:white;
    display:flex;
    align-items: center;
    justify-content: space-evenly;
    padding:100px 200px;
}
.hero-content{
    width:400px;
    color:#E5E7EB;
    font-size:18px;
}
h1{
    font-size:48px;
    font-weight:900;
    color:#F9FaF8;
}
.hero-section img{
    width:400px;
    height:auto;
}

/*Information*/
.info-section{
    padding: 50px;
}
.title{
    color:#1F2937;
    font-size:36px;
    font-weight:900;
    text-align: center;
}
.info-box{
    width:200px;
    height:200px;
    border: 2px solid rgb(69, 98, 228);
    border-radius:20px;
}
.container{
    display:flex;
    justify-content: center;
    align-items:center;
    gap:50px;
}

/*Testimonial*/
.testimonial-section{
    display:flex;
    justify-content: center;
    align-items:center;
    background-color: #E5E7EB;
    padding:100px 200px;
}

.testimonial{
    width:700px;
}

.quote{
    color:#1F2937;
    font-size:36px;
    font-style:italic;
    font-weight: lighter;
}

.quote-name{
    text-align:right;
    font-weight:bold;
    color:#1F2937;
}

/*Call To Action Section*/
.cta-section{
    display:flex;
    justify-content: center;
    align-items:center;
    padding:100px 200px;
}

.cta-container{
    background-color: #3882F6;
    width:700px;
    border-radius:10px;
    display:flex;
    align-items: center;
    justify-content: space-between;
    padding:50px 100px;
}

.cta-button{
    background-color: transparent;
    border: 2px solid white;
    border-radius:8px;
    padding: 10px 30px;
    color:white;
    font-weight:bold;
}

.cta-text, .cta-subtext{
    color:white;
}

.cta-text{
    font-weight:bold;
    font-size:18px;
}

.cta-subtext{
    font-weight:normal;
    font-size:14px;
}

